fixed the box alignment for the hero section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,13 +184,13 @@ p.progress-level {
   }
 
   .box {
-    width: 280px;
-    height: 120px;
+    width:80%;
+    height: 50%;
   }
   
   .box2 {
-    width: 280px;
-    height: 120px;
+    width:80%;
+    height: 50%;
     top: 100px;
   }
 
